# AUV_DRL_Navigation

./: .gitignore  README.md
configs/robot/: MJMODEL.TXT  mass_inert_para.txt
configs/train/: model_precision.txt
cpp_sim/: CMakeLists.txt
cpp_sim/src/: MyAUVApp.cpp  MyAUVApp.h  MyAUVManager.cpp  MyAUVManager.h  main.cpp
cpp_sim/src/controllers/: MotionController.h  MotionStrategy.h
cpp_sim/src/utils/: DataCollector.h  analysing_damping.py
docs/: mujoco_rl.md  satage3.md
hydro_MLP/src/: data_analysis.py  data_process.py  dataset.py  evaluate.py  evaluate_detail.py  model.py  train.py
mujoco_sim/assets/: yuyuan.xml
mujoco_sim/configs/: config.yaml
mujoco_sim/configs/env/: default.yaml
mujoco_sim/configs/task/: stage1_navigate.yaml  stage2_avoidance.yaml  stage3_domain_navigation.yaml
mujoco_sim/scripts/: check_env.py  enjoy_rl.py  evaluate.py  train.py
mujoco_sim/src/core/: hydro_plugin.py  models.py  robot.py  scene_builder.py  sensors.py
mujoco_sim/src/envs/: __init__.py  auv_base_env.py
mujoco_sim/src/envs/tasks/: __init__.py  avoidance_task.py  base_task.py  domain_navigation_task.py  navigation_task.py
mujoco_sim/src/utils/: astar_planner.py  check_mlp.py  kalman_filter.py  logger.py  verify_imu.py  verify_sensors.py
mujoco_sim/weights/RL_weights/forward10m/: evaluations.npz
mujoco_sim/weights/RL_weights/forward_3m/: evaluations.npz
mujoco_sim/weights/RL_weights/forward_yawexist/: evaluations.npz
mujoco_sim/weights/RL_weights/run_15/: evaluations.npz
mujoco_sim/weights/RL_weights/run_16/: evaluations.npz
(+7 files in other folders)
